--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^3.15.0",
     "axios": "^0.18.0",
+    "es6-promise": "^4.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "whatwg-fetch": "^3.0.0"
